tests/samples/invalid/array_of_endless_array.pn

fn foo()
{
	var y: [10][..]i32;
}
